--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 authors = ["Dmitry Kurbatov <dk@dimcha.ru>"]
 
 [dependencies]
-cairo-rs = { git = "https://github.com/kandeshvari/cairo.git", rev = "f436841" }
-cairo-sys-rs = { git = "https://github.com/kandeshvari/cairo.git", rev = "f436841" }
 libc = "0.2"
 xcb = { git = "https://github.com/kandeshvari/rust-xcb.git", rev = "05a4716" }
+glib = "^0"
+cairo-rs = "^0"
+cairo-sys-rs = "^0"
+
 
 [lib]
 name = "cairo_xcb"
